@@ -1,3 +1,9 @@
+2003-03-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Applied patch 627521 from Pascal Scheffers to
+	provide a search function using /?regexp to highlight matches, /?
+	to skip to the previous match and /! to reset the search state.
+
 2003-03-10  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl: Removed the Refresh button, and narrowed the other
